# KrzysiekKomp

./: .gitignore  CMakeLists.txt  Makefile  README.txt  asm.h  clock.asm  clock.c  clock.h  cmos.c  cmos.h  commands.c  common.h  disc.c  disc.h  exception.asm  exception.c  exception.h  fs_ext2.c  fs_ext2.h  fs_fat32.c  fs_fat32.h  gdt.h  idt.asm  idt.c  idt.h  keyboard.asm  keyboard.c  keyboard.h  linker.ld  loader.asm  main.c  main.h  mouse.c  mouse.h  parttable.c  parttable.h  pisz.c  pisz.h  power.asm  power.h  (+5 more)
lib/: multiboot.h
src/: boot.asm  main.c  main.cpp
src/arch/: exceptions.asm  exceptions.c  exceptions.h  gdt.asm  gdt.c  gdt.h  idt.asm  idt.c  idt.h
src/common/: asm.h  ports.h  types.h
src/hdd/: hdd.c  hdd.h
src/memory/: memory.c  memory.h
src/screen/: serial.c  serial.h  text_screen.c  text_screen.h
src/services/: clock.asm  clock.c  clock.h  keyboard.asm  keyboard.c  keyboard.h
src/stdlib/: iostream.h  printf.c  printf.h  string.c  string.h
src/stdlib/printf/: README  _printf.h  doprintf.c
